syntax = "proto3";

package user;

option go_package = "./proto;user";

message GetUserRequest {
  string auth0_id = 1;
  string email = 2;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
}

message UploadVideoRequest {
  string url = 1;
  string exercise_name = 2;
  string auth0_id = 3;
}

message UploadVideoResponse {
  bool success = 1;
  string message = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SaveUploadedVideo(UploadVideoRequest) returns (UploadVideoResponse);
}
